@@ -1,3 +1,7 @@
+* Fri Mar 08 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 5.0.3-0
+- Update the upper bound of stdlib to < 6.0.0
+- Update a URL in the README.rst
+
 * Mon Nov 05 2018 Liz Nemsick <lnemsick-simp@gmail.com> - 5.0.2-0
 - Update contribution guide URL in README.rst
 
